Closed
Bug 651147
Opened 9 years ago
Closed 9 years ago
TI: Assertion failure: fe <= top, at ./methodjit/ImmutableSync.cpp:152
Categories
(Core :: JavaScript Engine, defect, critical)
Tracking
()
RESOLVED
FIXED
People
(Reporter: decoder, Unassigned)
References
(Blocks 2 open bugs)
Details
(Keywords: assertion, testcase)
The following testcase asserts on TI revision d78eef12a329 (run with -m -n -a), tested on 32 bit: var BUGNUMBER = 96284; var BUGNUMBER = "410725"; function iteratorToArray(iterator) { var result = []; for (var i in iterator) BUGNUMBER[result.length]; } obj = { a: 1, }('["a", "b"]', iteratorToArray(), 'uneval(iteratorToArray(new Iterator(obj,true)))');
Comment 1•9 years ago
|
||
Bogus assertion in ImmutableSync, which should be able to manage copies of loop temporaries in the same way as other copies. http://hg.mozilla.org/projects/jaegermonkey/rev/3538d4d61e0e
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 2•7 years ago
|
||
A testcase for this bug was automatically identified at js/src/jit-test/tests/jaeger/bug651147.js.
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•