[INFER] Handle copies of loop invariant temporaries in ImmutableSync, bug 651147.